--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "19.2.3",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
+    "rss-parser": "^3.13.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
